@@ -1,6 +1,6 @@
 {
   "name": "simp-at",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "SIMP Team",
   "summary": "A SIMP Puppet module for managing at",
   "license": "Apache-2.0",
@@ -16,8 +16,8 @@
       "version_requirement": ">= 3.1.0 < 4.0.0"
     },
     {
-      "name": "simp/simpcat",
-      "version_requirement": ">= 6.0.0 < 7.0.0"
+      "name": "puppetlabs/concat",
+      "version_requirement": ">= 2.2.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
@@ -50,7 +50,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.10.4 < 6.0.0"
+      "version_requirement": ">= 4.10.4 < 7.0.0"
     }
   ]
 }
