@@ -9,6 +9,24 @@ describe 'at class' do
     EOS
   }
 
+  let(:manifest_users) {
+    <<-EOS
+      class { 'at':
+        users => ['joe', ' mary ']
+      }
+      at::user {' george': }
+    EOS
+  }
+
+  let(:expected_content) {
+    <<-EOS
+george
+joe
+mary
+root
+    EOS
+  }
+
   context 'on each host' do
     hosts.each do |host|
       it 'should work with default values' do
@@ -18,6 +36,14 @@ describe 'at class' do
       it 'should be idempotent' do
         apply_manifest_on(host, manifest, :catch_changes => true)
       end
+
+      it 'should add users' do
+        apply_manifest_on(host, manifest_users, :catch_failures => true)
+        on(host, 'cat /etc/at.allow') do
+          expect(stdout).to match(expected_content)
+        end
+      end
+
     end
   end
 end
