@@ -1,3 +1,6 @@
+* Mon Mar 25 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.0.7
+- replaced simpcat with concat
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.6
 - Update the upper bound of stdlib to < 6.0.0
 - Update a URL in the README.md
